wrapper/include/Rtsi/Elite_Rtsi_C.h

typedef struct elite_rtsi_client_handle_t elite_rtsi_client_handle_t;
typedef struct elite_rtsi_recipe_handle_t elite_rtsi_recipe_handle_t;
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_create(elite_rtsi_client_handle_t** out_handle);
ELITE_C_EXPORT void elite_rtsi_client_destroy(elite_rtsi_client_handle_t* handle);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_connect(elite_rtsi_client_handle_t* handle, const char* ip, int32_t port);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_disconnect(elite_rtsi_client_handle_t* handle);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_negotiate_protocol_version(elite_rtsi_client_handle_t* handle,
                                                                              uint16_t version, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_get_controller_version(elite_rtsi_client_handle_t* handle,
                                                                         elite_version_info_t* out_version);
// recipe_csv format: "actual_q,actual_qd,target_q"
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_setup_output_recipe(elite_rtsi_client_handle_t* handle,
                                                                      const char* recipe_csv, double frequency,
                                                                      elite_rtsi_recipe_handle_t** out_recipe);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_setup_input_recipe(elite_rtsi_client_handle_t* handle, const char* recipe_csv,
                                                                     elite_rtsi_recipe_handle_t** out_recipe);
ELITE_C_EXPORT void elite_rtsi_recipe_destroy(elite_rtsi_recipe_handle_t* recipe);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_start(elite_rtsi_client_handle_t* handle, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_pause(elite_rtsi_client_handle_t* handle, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_send(elite_rtsi_client_handle_t* handle, elite_rtsi_recipe_handle_t* recipe);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_receive_data(elite_rtsi_client_handle_t* handle,
                                                               elite_rtsi_recipe_handle_t* recipe, int32_t read_newest,
                                                               int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_is_connected(elite_rtsi_client_handle_t* handle, int32_t* out_connected);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_is_started(elite_rtsi_client_handle_t* handle, int32_t* out_started);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_is_read_available(elite_rtsi_client_handle_t* handle,
                                                                    int32_t* out_available);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_recipe_get_id(elite_rtsi_recipe_handle_t* recipe, int32_t* out_id);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_recipe_get_value_double(elite_rtsi_recipe_handle_t* recipe, const char* name,
                                                                   double* out_value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_recipe_get_value_int32(elite_rtsi_recipe_handle_t* recipe, const char* name,
                                                                  int32_t* out_value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_recipe_get_value_uint32(elite_rtsi_recipe_handle_t* recipe, const char* name,
                                                                   uint32_t* out_value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_recipe_get_value_bool(elite_rtsi_recipe_handle_t* recipe, const char* name,
                                                                 int32_t* out_value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_recipe_get_value_vector6d(elite_rtsi_recipe_handle_t* recipe, const char* name,
                                                                     double* out_value6, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_recipe_set_value_double(elite_rtsi_recipe_handle_t* recipe, const char* name,
                                                                   double value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_recipe_set_value_int32(elite_rtsi_recipe_handle_t* recipe, const char* name,
                                                                  int32_t value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_recipe_set_value_uint32(elite_rtsi_recipe_handle_t* recipe, const char* name,
                                                                   uint32_t value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_recipe_set_value_bool(elite_rtsi_recipe_handle_t* recipe, const char* name,
                                                                 int32_t value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_recipe_set_value_vector6d(elite_rtsi_recipe_handle_t* recipe, const char* name,
                                                                     const double* value6, int32_t* out_success);
ELITE_C_EXPORT const char* elite_rtsi_client_last_error_message(elite_rtsi_client_handle_t* handle);