dotnet/EliteRobots.CSharp/src/NativeMethods.cs


    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_robot_mode(nint handle, out int outMode);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_safety_mode(nint handle, out int outMode);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_running_status(nint handle, out int outStatus);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_get_task_status(nint handle, out int outStatus);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_speed_scaling(nint handle, out int outScaling);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_set_speed_scaling(nint handle, int scaling, out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_task_is_running(nint handle, out int outRunning);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_is_task_saved(nint handle, out int outSaved);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_play_program(nint handle, out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_pause_program(nint handle, out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_stop_program(nint handle, out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_load_configuration(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_load_task(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_is_configuration_modify(nint handle, out int outModified);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_version(
        nint handle,
        [Out] byte[]? outBuffer,
        int bufferLen,
        out int outRequiredLen);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_help(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string cmd,
        [Out] byte[]? outBuffer,
        int bufferLen,
        out int outRequiredLen);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_usage(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string cmd,
        [Out] byte[]? outBuffer,
        int bufferLen,
        out int outRequiredLen);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_robot_type(
        nint handle,
        [Out] byte[]? outBuffer,
        int bufferLen,
        out int outRequiredLen);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_robot_serial_number(
        nint handle,
        [Out] byte[]? outBuffer,
        int bufferLen,
        out int outRequiredLen);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_robot_id(
        nint handle,
        [Out] byte[]? outBuffer,
        int bufferLen,
        out int outRequiredLen);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_configuration_path(
        nint handle,
        [Out] byte[]? outBuffer,
        int bufferLen,
        out int outRequiredLen);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_get_task_path(
        nint handle,
        [Out] byte[]? outBuffer,
        int bufferLen,
        out int outRequiredLen);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_dashboard_send_and_receive(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string cmd,
        [Out] byte[]? outBuffer,
        int bufferLen,
        out int outRequiredLen);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nint elite_dashboard_last_error_message(nint handle);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_create(out nint outHandle);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void elite_rtsi_client_destroy(nint handle);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_connect(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string ip,
        int port);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_disconnect(nint handle);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_negotiate_protocol_version(
        nint handle,
        ushort version,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_get_controller_version(
        nint handle,
        out EliteVersionInfoNative outVersion);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_setup_output_recipe(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string recipeCsv,
        double frequency,
        out nint outRecipe);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_setup_input_recipe(
        nint handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string recipeCsv,
        out nint outRecipe);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void elite_rtsi_recipe_destroy(nint recipe);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_start(nint handle, out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_pause(nint handle, out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_send(nint handle, nint recipe);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_receive_data(
        nint handle,
        nint recipe,
        int readNewest,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_is_connected(nint handle, out int outConnected);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_is_started(nint handle, out int outStarted);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_client_is_read_available(nint handle, out int outAvailable);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_recipe_get_id(nint recipe, out int outId);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_recipe_get_value_double(
        nint recipe,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out double outValue,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_recipe_get_value_int32(
        nint recipe,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out int outValue,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_recipe_get_value_uint32(
        nint recipe,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out uint outValue,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_recipe_get_value_bool(
        nint recipe,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out int outValue,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_recipe_get_value_vector6d(
        nint recipe,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [Out] double[] outValue6,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_recipe_set_value_double(
        nint recipe,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        double value,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_recipe_set_value_int32(
        nint recipe,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        int value,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_recipe_set_value_uint32(
        nint recipe,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        uint value,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_recipe_set_value_bool(
        nint recipe,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        int value,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_rtsi_recipe_set_value_vector6d(
        nint recipe,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [In] double[] value6,
        out int outSuccess);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nint elite_rtsi_client_last_error_message(nint handle);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern EliteStatus elite_primary_create(out nint outHandle);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void elite_primary_destroy(nint handle);
